@@ -1,3 +1,4 @@
 2015-04-12	--	v0.0.1	-- Initial release.
 2015-04-12	--	v0.1.0	-- First code commit
 2015-04-12	--	v0.2.0	-- Change on requirements, package extension, etc.
+2015-06-19	--	v0.3.0	-- Updated progress functions and history field
